// Web后台与NCX客户端的rpc通信协议

syntax = "proto3";// 协议为proto3

package protocol.ncx_client;
option go_package = ".";

// 配置信息申请请求
message ConfigInfoReq {
    string token = 1;
}

// 服务配置信息
message ServiceConfig {
    string service_name = 1;
    string service_ip = 2;
    int32  service_port = 3;
    int32  proxy_port = 4;
}

// 配置信息申请响应
message ConfigInfoResp {
    int32 code = 1;             // 1:成功 0:失败
    repeated ServiceConfig service_configs = 2;
}

// 配置信息服务
service ConfigInfo {
    // 获取配置信息
    rpc AskConfigInfo(ConfigInfoReq) returns (ConfigInfoResp);
}